--- a/rustlings/day1.html
+++ b/rustlings/day1.html
@@ -501,7 +501,7 @@ fn main() {
 }</code></pre></pre>
 <h2 id="做题"><a class="header" href="#做题">做题</a></h2>
 <p>好了，那么在学了以上的内容以后，基本上对rust有了最最基本的认识了，可以开始做题了。</p>
-<p>第一天做了16题。遇到了所有权、字符串相关的内容，就此停手。</p>
+<p>第一天做了17题。遇到了切片相关的内容，就此停手。</p>
 
                     </main>
 
